# engsoft

./: .gitignore  README.md
line_follower/: .cproject  .project  line_follower.ttt
line_follower/CPPremoteAPI/: CMakeLists.txt  main.cpp
vrep_tutorial/: .cproject  .project  aula2.ttt
vrep_tutorial/CPPremoteAPI/: CMakeLists.txt
warehouse/CPPremoteAPI/: CMakeLists.txt  warehousebot.cpp  warehousedock.cpp
warehouse/CPPremoteAPI/libraries/: battery.h  diffdrive.h  linefollow.cpp  robot.h  statemachine.cpp  statemachine.h
warehousebot/: .cproject  warehousebot.ttt
warehousebot/CPPremoteAPI/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  diffdrive.cpp  diffdrive.h  dock.h  linefollow.cpp  linefollow.h  robot.cpp  robot.h  warehousebot.cpp  warehousedock.cpp
warehousebot/CPPremoteAPI/libraries/: diffdrive.cpp  dock.cpp  dock.h  linefollow.cpp  linefollow.h  robot.cpp  robot.h  statemachine.cpp  statemachine.h
warehousebot/src/: dock.cpp  dock.h  robot.h  warehousebot.cpp
warehousebot_final/: .cproject  warehousebot_final.ttt
warehousebot_final/CPPremoteAPI/: warehousebattery.cpp
warehousebot_final/CPPremoteAPI/libraries/: battery.cpp  dock.cpp  dock.h  linefollow.cpp  linefollow.h  robot.cpp  robot.h  statemachine.cpp  statemachine.h
warehousebot_masterblasterfinal/: .project
warehousebot_masterblasterfinal/CPPremoteAPI/libraries/: dock.cpp  robot.h  statemachine.cpp  statemachine.h
warehousebot_suvinil/: warehousebot_suvinil.ttt
warehousebot_suvinil/CPPremoteAPI/libraries/: dock.cpp  dock.h  linefollow.cpp  statemachine.cpp  (+1 more)
